--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.2.3",
+    "popper.js": "^1.16.1",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
@@ -20,6 +27,7 @@
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
     "prettier": "^2.8.8",
+    "sass": "^1.62.1",
     "vite": "^4.3.5"
   }
 }
