--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "@rushstack/eslint-patch": "^1.3.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-prettier": "^7.1.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.41.0",
     "eslint-plugin-vue": "^9.14.1",
+    "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "sass": "^1.62.1",
+    "tailwindcss": "^3.3.2",
     "vite": "^4.3.9"
   }
 }
