--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "animate.css": "^4.1.1",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.2",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.1",
