--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier": "^2.8.8",
     "sass": "^1.63.3",
     "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.3",
     "vite": "^4.3.9"
   }
 }
