--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,10 @@
     "source.fixAll.eslint": true
   },
   "cSpell.words": [
+    "chartjs",
     "fontawesome",
     "fortawesome",
+    "nightwatch",
     "rushstack",
     "tailwindcss",
     "vuex"
