🚨 綴の警告が出ないように

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
-  "eslint.validate": ["vue", "html", "javascript"],
+  "eslint.validate": [
+    "vue",
+    "html",
+    "javascript"
+  ],
   "editor.formatOnSave": true,
   "vetur.validation.template": true,
   "editor.codeActionsOnSave": {
@@ -12,6 +16,7 @@
     "nightwatch",
     "rushstack",
     "tailwindcss",
+    "Vetur",
     "vuex"
   ]
 }
